--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="style/bootstrap.css" rel="stylesheet">
     <script src="style/bootstrap.js"></script>
     <link href="style/main.css" rel="stylesheet">
-    <link href="style/template.css" rel="stylesheet">
+    <!--<link href="style/template.css" rel="stylesheet">-->
     <script src="scripts/regular.js"></script>
     <script src="scripts/main.js"></script>
    
     </head>
     <body>
-        <div id ="app">
+        <div id="home">
         <div id ="video-container">
      <video width="100%" height="100%" autoplay loop muted>
         <source ng-src="video/T7-bgVideo.mp4" 
@@ -31,12 +31,16 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <h5 class="text-faded mb-5">The Best Fights Are Personal</h5>
-            <button class="btn btn-xl js-scroll-trigger rounded" id="headerBtn" href="#">View Now</button>
+            <button class="btn btn-xl js-scroll-trigger rounded" id="headerBtn" onClick="sourceJs.homeClick()">View Now</button>
           </div>
         </div>
       </div>
     </header>
         </div>
         </div>
+
+        <div id ="app">hi</div>
+
+
     </body>
 </html>
