--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <script src="scripts/main.js"></script>
    
     </head>
-    <body>
+    <body onload="sourceJs.load();">
+        <div id="loading">
+              <img id="load-img" src="gifs/ajax-loader.gif" alt="Loading..." />
+        </div>
         <div id="home">
         <div id ="video-container">
      <video width="100%" height="100%" autoplay loop muted>
@@ -30,7 +33,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <h5 class="text-faded mb-5">The Best Fights Are Personal</h5>
+            <h5 class="text-faded mb-5 headerText">The Best Fights Are Personal</h5>
             <button class="btn btn-xl js-scroll-trigger rounded" id="headerBtn" onClick="sourceJs.homeClick()">View Now</button>
           </div>
         </div>
@@ -39,7 +42,9 @@
         </div>
         </div>
 
-        <div id ="app">hi</div>
+        <div id ="app">
+            <ul id = "appList"></ul>
+        </div>
 
 
     </body>
