--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </header>
         </div>
         </div>
-
-        <div id ="app">
-            <ul id = "appList"></ul>
+        <div id ="app" class="list-group">
+          <div class = "container">
+            <div id = "appList"></div>
         </div>
-
+    </div>
 
     </body>
 </html>
