--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
     </header>
         </div>
         </div>
-        <div id ="app" class="list-group">
+        <div id ="app">
+            <div class = "modal-background">
+                <div class = "modal-box">
+                    <div class= "modal-header">
+                        <div class= "modal-close">X</div>
+                    </div>
+                    <div class= "modal-body"></div>
+                </div>
+            </div>
           <div class = "container">
             <div id = "appList"></div>
         </div>
