--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="style/bootstrap.css" rel="stylesheet">
     <script src="style/bootstrap.js"></script>
     <link href="style/main.css" rel="stylesheet">
-    <!--<link href="style/template.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">     
     <script src="scripts/regular.js"></script>
     <script src="scripts/main.js"></script>
    
@@ -42,6 +42,7 @@
         </div>
         </div>
         <div id ="app">
+            <div id = "prevBtn" class ="previous" onClick="sourceJs.prevClick()"><i class="fas fa-2x fa-arrow-left"></i></div>
             <div class = "modal-background">
                 <div class = "modal-box">
                     <div class= "modal-header">
@@ -53,6 +54,7 @@
           <div class = "container">
             <div id = "appList"></div>
         </div>
+        <div class="scroll"><i class="fas fa-2x fa-arrow-up"></i></div>
     </div>
 
     </body>
