--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="scripts/main.js"></script>
    
     </head>
-    <body onload="sourceJs.load();">
+    <body>
         <div id="loading">
               <img id="load-img" src="gifs/ajax-loader.gif" alt="Loading..." />
         </div>
