--- a/frames.html
+++ b/frames.html
@@ -9,10 +9,11 @@
     <link href="style/bootstrap.css" rel="stylesheet">
     <script src="style/bootstrap.js"></script>
     <link href="style/main.css" rel="stylesheet">
+    <link href="tables/datatables.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">     
     <script src="scripts/regular.js"></script>
     <script src="scripts/main.js"></script>
-   
+    <script src="tables/datatables.js"></script>
     </head>
     <body>
         <div id ="app" style="display:block;">
@@ -29,7 +30,6 @@
             <div id = "appList"></div>
         </div>
         <div class="scroll"><i class="fas fa-2x fa-arrow-up"></i></div>
-    </div>
-
+    </div> 
     </body>
 </html>
