--- a/frames.html
+++ b/frames.html
@@ -17,7 +17,8 @@
     </head>
     <body>
         <div id ="app" style="display:block;">
-            <div id = "prevBtn" class ="previous" onClick="sourceJs.prevClick()"><i class="fas fa-2x fa-arrow-left"></i></div>
+            <!-- <div id = "prevBtn" class ="previous" onClick="sourceJs.prevClick()"><i class="fas fa-2x fa-arrow-left"></i></div> -->
+            <a href="index.html"><div id = "prevBtn" class ="previous"><i class="fas fa-2x fa-arrow-left"></i></div></a>
             <div class = "modal-background">
                 <div class = "modal-box">
                     <div class= "modal-header">
