--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <h5 class="text-faded mb-5 headerText">The Best Fights Are Personal</h5>
-            <button class="btn btn-xl js-scroll-trigger rounded" id="headerBtn" onClick="sourceJs.homeClick()">View Now</button>
+            <a href="frames.html"><button class="btn btn-xl js-scroll-trigger rounded" id="headerBtn">View Now</button></a>
+            <!-- <button class="btn btn-xl js-scroll-trigger rounded" id="headerBtn" onClick="sourceJs.homeClick()">View Now</button> -->
           </div>
         </div>
       </div>
